--- a/sdk/nodejs/tsconfig.json
+++ b/sdk/nodejs/tsconfig.json
@@ -39,12 +39,12 @@
         "networkResource.ts",
         "networkRouter.ts",
         "peer.ts",
+        "personalAccessToken.ts",
         "policy.ts",
         "postureCheck.ts",
         "provider.ts",
         "route.ts",
         "setupKey.ts",
-        "token.ts",
         "types/index.ts",
         "types/input.ts",
         "types/output.ts",
