Fix Java SDK build in CI by using gradle instead of gradlew

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,6 +70,6 @@ jobs:
           # DotNet
           (cd sdk/dotnet && dotnet build)
           # Java
-          (cd sdk/java && ./gradlew build)
+          (cd sdk/java && gradle build)
           # Go
           (cd sdk/go/index && go build ./...)
