Rename .NET package to KitStream.Pulumi.Netbird

--- a/examples/dotnet/minimal/minimal-dotnet.csproj
+++ b/examples/dotnet/minimal/minimal-dotnet.csproj
@@ -7,6 +7,6 @@
 
   <ItemGroup>
     <PackageReference Include="Pulumi" Version="3.*" />
-    <ProjectReference Include="../../../sdk/dotnet/Pulumi.KitStream.Netbird.csproj" />
+    <ProjectReference Include="../../../sdk/dotnet/KitStream.Pulumi.Netbird.csproj" />
   </ItemGroup>
 </Project>
