Trim generate_sdks.sh and update workflows to handle versioning and SDK builds

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,16 +55,15 @@ jobs:
       - name: Build Provider
         run: |
           cd provider
-          go build -o ../bin/pulumi-tfgen-netbird ./cmd/pulumi-tfgen-netbird
           go build -o ../bin/pulumi-resource-netbird ./cmd/pulumi-resource-netbird
 
-      - name: Generate SDKs
-        run: ./scripts/generate_sdks.sh 0.0.1
+      - name: Generate version.txt for .NET SDK
+        run: echo "0.0.1" > sdk/dotnet/version.txt
 
       - name: Build SDKs
         run: |
           # Node.js
-          (cd sdk/nodejs && npm install && npm run build)
+          (cd sdk/nodejs && npm install && npm run build && mkdir -p bin && cp package.json bin/)
           # Python
           (cd sdk/python && python3 setup.py build)
           # DotNet
