--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -54,6 +54,9 @@ jobs:
           cd provider
           go build -o ../bin/pulumi-resource-netbird ./cmd/pulumi-resource-netbird
 
+      - name: Generate version.txt for .NET SDK
+        run: echo "0.0.1" > sdk/dotnet/version.txt
+
       - name: Run Integration Tests
         run: |
           cd tests
