--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,13 +66,13 @@ jobs:
       - name: Generate version.txt for .NET SDK
         run: echo "${{ steps.get_version.outputs.VERSION }}" > sdk/dotnet/version.txt
 
-      - name: Publish Node.js SDK
-        run: |
-          cd sdk/nodejs
-          npm ci
-          npm run build --if-present
-          npm version ${{ steps.get_version.outputs.VERSION }} --no-git-tag-version
-          npm publish --access public --provenance
+#      - name: Publish Node.js SDK
+#        run: |
+#          cd sdk/nodejs
+#          npm ci
+#          npm run build --if-present
+#          npm version ${{ steps.get_version.outputs.VERSION }} --no-git-tag-version
+#          npm publish --access public --provenance
 
       - name: Build Python SDK
         run: |
