--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,10 +58,10 @@ jobs:
       - name: Install Pulumi CLI
         uses: pulumi/actions@v6
 
-      - name: Build Provider
-        run: |
-          cd provider
-          go build -ldflags "-X main.version=${{ steps.get_version.outputs.VERSION }}" -o ../bin/pulumi-resource-netbird ./cmd/pulumi-resource-netbird
+#      - name: Build Provider
+#        run: |
+#          cd provider
+#          go build -ldflags "-X main.version=${{ steps.get_version.outputs.VERSION }}" -o ../bin/pulumi-resource-netbird ./cmd/pulumi-resource-netbird
 
       - name: Generate version.txt for .NET SDK
         run: echo "${{ steps.get_version.outputs.VERSION }}" > sdk/dotnet/version.txt
@@ -90,7 +90,7 @@ jobs:
         uses: NuGet/login@v1
         id: login
         with:
-          user: kitstream-bot
+          user: ${{ secrets.NUGET_USERNAME }}
 
       - name: Publish DotNet SDK
         run: |
