--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -26,8 +26,12 @@ builds:
       - -X main.version={{.Version}}
 
 archives:
-  - formats: ["tar.gz", "zip"]
+  - format: tar.gz
     name_template: "{{ .ProjectName }}-v{{ .Version }}-{{ .Os }}-{{ .Arch }}"
+    # Use gzip for all except windows
+    format_overrides:
+      - goos: windows
+        format: zip
 
 checksum:
   name_template: 'checksums.txt'
